Opened 9 months ago

Closed 9 months ago

#18907 closed bug (fixed)

[Regression] hrev57752 boot failure.

Reported by: bbjimmy Owned by: nobody
Priority: blocker Milestone: R1/beta5
Component: System/Kernel Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: x86-64

Description

Updating from hrev57740 x86_64

the rocket never lights.

Welcome to the Haiku shell.

~/Desktop> listdev

device Bridge (Host bridge) [6|0|0]
  vendor 8086: Intel Corporation
  device 0c00: 4th Gen Core Processor DRAM Controller

device Display controller (VGA compatible controller, VGA controller) [3|0|0]
  vendor 8086: Intel Corporation
  device 0412: Xeon E3-1200 v3/4th Gen Core Processor Integrated Graphics Controller

device Multimedia controller (Audio device) [4|3|0]
  vendor 8086: Intel Corporation
  device 0c0c: Xeon E3-1200 v3/4th Gen Core Processor HD Audio Controller

device Serial bus controller (USB controller, XHCI) [c|3|30]
  vendor 8086: Intel Corporation
  device 8c31: 8 Series/C220 Series Chipset Family USB xHCI

   device Hub (Unused, Full speed (or root) hub) [9|0|0]
     vendor 0000: Unknown
     device 0000: Unknown

      device Human Interface Device (No Subclass, None) [3|0|0]
        vendor 046d: Logitech, Inc.
        device c31c: Keyboard K120

device Communication controller [7|80|0]
  vendor 8086: Intel Corporation
  device 8c3a: 8 Series/C220 Series Chipset Family MEI Controller #1

device Communication controller (Serial controller, 16550) [7|0|2]
  vendor 8086: Intel Corporation
  device 8c3d: 8 Series/C220 Series Chipset Family KT Controller

device Network controller (Ethernet controller) [2|0|0]
  vendor 8086: Intel Corporation
  device 153a: Ethernet Connection I217-LM

device Serial bus controller (USB controller, EHCI) [c|3|20]
  vendor 8086: Intel Corporation
  device 8c2d: 8 Series/C220 Series Chipset Family USB EHCI #2

   device Hub (Unused, Full speed (or root) hub) [9|0|0]
     vendor 0000: Unknown
     device 0000: Unknown

      device Hub (Unused, Full speed (or root) hub) [9|0|0]
        vendor 8087: Intel Corp.
        device 8008: Integrated Rate Matching Hub

device Multimedia controller (Audio device) [4|3|0]
  vendor 8086: Intel Corporation
  device 8c20: 8 Series/C220 Series Chipset High Definition Audio Controller

device Serial bus controller (USB controller, EHCI) [c|3|20]
  vendor 8086: Intel Corporation
  device 8c26: 8 Series/C220 Series Chipset Family USB EHCI #1

   device Hub (Unused, Full speed (or root) hub) [9|0|0]
     vendor 0000: Unknown
     device 0000: Unknown

      device Hub (Unused, Full speed (or root) hub) [9|0|0]
        vendor 8087: Intel Corp.
        device 8000: Integrated Rate Matching Hub

         device Human Interface Device (Boot Interface Subclass, Mouse) [3|1|2]
           vendor 046d: Logitech, Inc.
           device c03d: M-BT96a Pilot Optical Mouse

device Bridge (ISA bridge) [6|1|0]
  vendor 8086: Intel Corporation
  device 8c4e: Q87 Express LPC Controller

device Mass storage controller (SATA controller, AHCI 1.0) [1|6|1]
  vendor 8086: Intel Corporation
  device 8c02: 8 Series/C220 Series Chipset Family 6-port SATA Controller 1 [AHCI mode]

device Serial bus controller (SMBus) [c|5|0]
  vendor 8086: Intel Corporation
  device 8c22: 8 Series/C220 Series Chipset Family SMBus Controller
~/Desktop> 

Attachments (1)

IMG_20240530_153346537_min.jpg (2.3 MB ) - added by korli 9 months ago.

Change History (11)

comment:1 by korli, 9 months ago

Platform: Allx86-64
Version: R1/beta4R1/Development

by korli, 9 months ago

comment:2 by korli, 9 months ago

Tested by downloading nightly hrev57752 the KDL is displayed on the screen very slowly. Indeed hrev57740 boots correctly.

Last edited 9 months ago by korli (previous) (diff)

comment:3 by waddlesplash, 9 months ago

Component: - GeneralSystem/Kernel
Milestone: UnscheduledR1/beta5
Priority: normalblocker

I think the only real possibility here is hrev57750~2. Strange that it would cause this. Another user on IRC commented about the boot succeeding but redraws being very slow.

comment:4 by waddlesplash, 9 months ago

Ah, the problem is likely that vm_init_post_modules is called after we clear the arrays: https://xref.landonf.org/source/xref/haiku/src/system/kernel/arch/x86/arch_vm.cpp#700

comment:5 by waddlesplash, 9 months ago

Oddly enough the problems (slowness and KDL) don't replicate on VMware at all.

comment:6 by waddlesplash, 9 months ago

This should be fixed in hrev57753, please retest.

comment:7 by TimKack, 9 months ago

Thank you for the quick turnaround on this!

I can confirm that it is resolved on all my machines with this change. Verified on a Lenovo T450, iMac 27" 4x i5, and on a 2x Quadcore Dell T7400. Good work!

comment:8 by pulkomandy, 9 months ago

Summary: [Regression} hrev57752 boot failure.[Regression] hrev57752 boot failure.

comment:9 by bbjimmy, 9 months ago

Indeed, updating to hrev57753 boots and works as expected.

comment:10 by pulkomandy, 9 months ago

Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.