kernel/vm: Only prevent access to the physical allocated ranges.

The physical memory ranges will actually be used again
later on during post-modules VM setup. The allocated ranges
are what we really want to prevent access to, anyway.

Fixes #18907.